# GNN_Isotope_Shifts

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cn_standard.yaml  co_standard.yaml  molecules.yaml  pn_standard.yaml  sin_standard.yaml  sio_standard.yaml
notes/: predicted_shift_methodology.md
scripts/: combining_duo_marv.py  states_scraping.py
src/: config.py  dataset.py  def_reader.py  masses.py  model.py  plotting.py  ps_baseline.py  registry.py  train.py  utils.py
tests/: test_dataset_edges.py  test_ingestion.py  test_masses.py  test_model.py  test_ps_baseline.py  test_registry.py
