[project]
name = "gnn-isotope-shifts"
version = "0.1.0"
description = "GNN project for Isotope Shifts with CUDA 12.6"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
]
